Minor spacing fixes.

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ figure > br {
 .full-width {
 	margin-right: 0;
 	margin-left: 0;
+	margin-top: 1.5em;
 }
 
 .col-md-6 img {
@@ -221,6 +222,7 @@ blockquote p{
 	}
 }
 /*Image captions*/
+
 .wp-caption-text {
 	position: relative;
 	font-size: .8em;
@@ -553,6 +555,8 @@ img.lazy {
 div.wp-caption {
 	padding-left: 1.5em;
 	padding-right: 1.5em;
+	margin-top: 1.5em;
+
 }
 
 p.wp-caption.img-responsive-text {
